--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       padding: 1.5rem;
       margin: 2rem 0;
       background: linear-gradient(to right, #f0f8ff, #e6f7ff);
+      background: none;
     }
   </style>
 </head>
@@ -58,7 +59,7 @@
           <td>高校教員</td>
         </tr>
       </table>
-      <img src="https://d.kuku.lu/cgxcfwt6j" alt="テトリスの画像">
+      <img src="" alt="テトリスの画像">
     </section>
 
     <section>
