--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <td>高校教員</td>
         </tr>
       </table>
-      <img src="" alt="テトリスの画像">
+      <img src="てと 1.jpg" alt="テトリスの画像">
     </section>
 
     <section>
