--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <section>
       <h4>情報学科の興味のある分野</h4>
       <h5>データサイエンス・ビッグデータ</h5>
+      <img src="" alt="データサイエンスの画像">
     </section>
   </main>
 </body>
