--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <h4>情報学科の興味のある分野</h4>
       <h5>データサイエンス・ビッグデータ</h5>
       <img src="detascience.jpg" alt="データサイエンスの画像">
-      <img src="" alt="ビックデータの画像">
+      <img src="bigdeta.jpg" alt="ビックデータの画像">
     </section>
   </main>
 </body>
