--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
     <section>
       <h4>情報学科の興味のある分野</h4>
       <h5>データサイエンス・ビッグデータ</h5>
-      <img src="detascience.jpg" alt="データサイエンスの画像">
-      <img src="bigdeta.jpg" alt="ビックデータの画像">
+      <div>
+        <img src="detascience.jpg" alt="データサイエンスの画像">
+        <img src="bigdeta.jpg" alt="ビックデータの画像">
+      </div>    
     </section>
   </main>
 </body>
