--- a/index.html
+++ b/index.html
@@ -63,8 +63,17 @@
     </section>
 
     <section>
-      <h4>情報学科の興味のある分野</h4>
-      <h5>データサイエンス・ビッグデータ</h5>
+      <h2>情報学科の興味のある分野</h2>
+      <h3>データサイエンス・ビッグデータ</h3>
+      <h4>
+        データサイエンスとは
+        膨大なデータから有益な情報や知見を引き出す学問
+        ex)交通情報青売りの渋滞予測、医療分野での診断支援など
+           個人に合わせたサービス
+        ビックデータとは
+        従来型のデータベースシステムで扱いきれないほどの大量のデータ
+        ex)SNSの投稿データ、Ｗｅｂサイトのアクセスログ、センサーデータなど
+      </h4>
       <div>
         <img src="detascience.jpg" alt="データサイエンスの画像">
         <img src="bigdeta.jpg" alt="ビックデータの画像">
